--- a/Pages/Register-Ordinary/style.css
+++ b/Pages/Register-Ordinary/style.css
@@ -64,6 +64,7 @@
   line-height: var(--16-semibold-line-height);
   white-space: nowrap;
   font-style: var(--16-semibold-font-style);
+  border: #00000040;
 }
 
 .register-ordinary .icon-left {
@@ -108,6 +109,7 @@
   height: 54px;
   top: 67px;
   left: 0;
+  border-color: #00000040;
 }
 
 .register-ordinary .p {
@@ -241,6 +243,7 @@
   font-size: 16px;
   letter-spacing: 0;
   line-height: normal;
+ 
 }
 
 .register-ordinary .padlock {
