--- a/Pages/UserType/style.css
+++ b/Pages/UserType/style.css
@@ -1,202 +1,33 @@
-.login-user-type {
-  background-color: #2f0941;
+body {
+  font-family: 'poppins', sans-serif;
+  background-color: #39004b;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+.card {
+  background: white;
+  border-radius: 10px;
+  padding: 100px;
+  margin: 10px;
+  width: 200px;
+  text-align: center;
+  color: black;
+  text-decoration: none;
+}
+.card img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+.container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  width: 100%;
 }
-
-.login-user-type .overlap-wrapper {
-  background-color: #2f0941;
-  border: 1px solid;
-  border-color: #000000;
-  width: 1440px;
-  height: 900px;
-}
-
-.login-user-type .overlap {
-  position: relative;
-  width: 1333px;
-  height: 900px;
-}
-
-.login-user-type .overlap-group {
-  position: absolute;
-  width: 1262px;
-  height: 900px;
-  top: 0;
-  left: 0;
-}
-
-.login-user-type .div {
-  position: absolute;
-  width: 1051px;
-  height: 900px;
-  top: 0;
-  left: 0;
-}
-
-.login-user-type .group {
-  position: absolute;
-  width: 730px;
-  height: 900px;
-  top: 0;
-  left: 0;
-  background-color: #01091480;
-}
-
-.login-user-type .rectangle {
-  position: absolute;
-  width: 397px;
-  height: 354px;
-  top: 273px;
-  left: 178px;
-  background-color: #ffffff;
-  border-radius: 57px;
-  border: 1px solid;
-  border-color: #000000;
-  box-shadow: inset 0px 4px 4px #00000040;
-}
-
-.login-user-type .text-wrapper {
-  position: absolute;
-  top: 556px;
-  left: 276px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 500;
-  color: #2f0941;
-  font-size: 30px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.login-user-type .logo-header {
-  display: flex;
-  width: 1002px;
-  align-items: center;
-  gap: 244px;
-  position: absolute;
-  top: 62px;
-  left: 48px;
-}
-
-.login-user-type .logo {
-  position: relative;
-  width: 182.13px;
-  height: 36px;
-}
-
-.login-user-type .party-PRO {
-  position: absolute;
-  width: 147px;
-  height: 35px;
-  top: 7px;
-  left: 35px;
-}
-
-.login-user-type .pattern {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  top: 5px;
-  left: 2px;
-  background-color: #ffb82b;
-  transform: rotate(-30deg);
-}
-
-.login-user-type .pattern-2 {
-  top: 18px;
-  left: 4px;
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: #ffb82b;
-}
-
-.login-user-type .pattern-3 {
-  top: 5px;
-  left: 18px;
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: #ffb82b;
-}
-
-.login-user-type .pattern-4 {
-  top: 18px;
-  left: 18px;
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: #ffb82b;
-}
-
-.login-user-type .friends-celebrating {
-  position: absolute;
-  width: 251px;
-  height: 188px;
-  top: 337px;
-  left: 251px;
-}
-
-.login-user-type .overlap-2 {
-  position: absolute;
-  width: 397px;
-  height: 354px;
-  top: 273px;
-  left: 865px;
-  background-color: #ffffff;
-  border-radius: 57px;
-}
-
-.login-user-type .text-wrapper-2 {
-  position: absolute;
-  top: 283px;
-  left: 110px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 500;
-  color: #2f0941;
-  font-size: 30px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.login-user-type .woman-connects-a {
-  position: absolute;
-  width: 292px;
-  height: 254px;
-  top: 50px;
-  left: 69px;
-}
-
-.login-user-type .back-to-website {
-  position: absolute;
-  width: 167px;
-  height: 34px;
-  top: 60px;
-  left: 1166px;
-  box-shadow: 0px 4px 4px #00000040;
-}
-
-.login-user-type .text-wrapper-3 {
-  position: absolute;
-  width: 141px;
-  top: 0;
-  left: 24px;
-  font-family: var(--16-semibold-font-family);
-  font-weight: var(--16-semibold-font-weight);
-  color: #ffffff;
-  font-size: var(--16-semibold-font-size);
-  letter-spacing: var(--16-semibold-letter-spacing);
-  line-height: var(--16-semibold-line-height);
-  white-space: nowrap;
-  font-style: var(--16-semibold-font-style);
-}
-
-.login-user-type .icon-left {
-  position: absolute;
-  width: 19px;
-  height: 20px;
-  top: 7px;
-  left: 0;
+a {
+  color: inherit; 
+  text-decoration: none; 
 }
