--- a/Backend/CSS/viewReservation.css
+++ b/Backend/CSS/viewReservation.css
@@ -1,15 +1,11 @@
-table {
-    border-collapse: collapse;
-    width: 100%;
-    margin-top: 20px;
-}
+
 body {
     font-family: 'Poppins', sans-serif;
     background-image: url('../images/admin5.webp');
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     color: #f4f4f4;
-    margin: 0;
+    margin: 10px;
     padding: 20px;
 }
 
@@ -57,6 +53,7 @@ table {
     width: 100%;
     margin-top: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
+    margin-bottom: 20px;
 }
 
 th, td {
@@ -69,7 +66,7 @@ th, td {
 }
 
 th {
-    background-color: #d699ff;
+    background-color: #8b00e8;
     color: #ffffff;
 }
 
@@ -112,20 +109,7 @@ tr:hover {
     z-index: 1;
 }
 
-input[type="text"],
-input[type="date"],
-input[type="time"],
-input[type="number"] {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    box-sizing: border-box;
-    border-radius: 10px;
-    border: 1px solid #ddd;
-    background-color: #ffffff; 
-    color: #3e0b52;
-    transition: border-color 0.3s;
-}
+
 
 input[type="text"]:focus,
 input[type="date"]:focus,
