--- a/Pages/404-Page/style.css
+++ b/Pages/404-Page/style.css
@@ -141,7 +141,7 @@
 
 .element .text-wrapper-2 {
   position: relative;
-  width: fit-content;
+  width: 100%;
   margin-top: -1px;
   font-family: "Krub", Helvetica;
   font-weight: 600;
